PROYECTO01 --> ORIGIN MASTER  WAR (06/06/2014)

--- a/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NominaF.xhtml
@@ -334,7 +334,7 @@
 
                                         <fieldset style="height: 35px; width: 130px; display: block; position: absolute; border-radius: 5px; top: 423px; left: 306px;">
 
-                                            <p:commandButton id="IngresoPersonal" value="" disabled="#{controlRemoto.activo}"  style="position: absolute; background-image: url(Imagenes/Iconos/ingreso.png); width: 45px; height: 40px; top: 2px; background-repeat: no-repeat; background-size: 100% 100%; left: 3px; border: outset; border-width: 2px;" />                            
+                                            <p:commandButton id="IngresoPersonal" value="" disabled="#{controlRemoto.activo}"  style="position: absolute; background-image: url(Imagenes/Iconos/ingreso.png); width: 45px; height: 40px; top: 2px; background-repeat: no-repeat; background-size: 100% 100%; left: 3px; border: outset; border-width: 2px;" action="personaIndividual"/>                            
                                             <p:tooltip  for="IngresoPersonal">
                                                 #{msg['ingresodepersonal1']}<br/>#{msg['ingresodepersonal2']}
                                             </p:tooltip>
