--- a/DesignerRHN/DesignerRHN-war/web/Comprobante.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Comprobante.xhtml
@@ -33,8 +33,8 @@
                                 <h:outputText value="#{msg['estructura']}" style="color: #14388B; font-size: 12px; font-weight: bold; position: absolute; top: 60px; left: 300px"/>
                                 <h:outputText value="#{controlComprobantes.parametroEstructura.estructura.nombre}" style="color: black; font-size: 12px; font-weight: bold; position: absolute; top: 76px; left: 300px"/>
 
-                                <p:commandButton style="position: absolute; left: 815px; top: 24px; font-size: 11px; font-family: Arial, Helvetica, sans-serif; width: 20px; height: 20px; background-image: url(Imagenes/arriba.JPG); background-size: 100% 100%; background-repeat: no-repeat; "  value="" actionListener="#{controlComprobantes.anteriorEmpleado()}" process="@this" />
-                                <p:commandButton style="position: absolute; left: 815px; top: 45px; font-size: 11px; font-family: Arial, Helvetica, sans-serif; width: 20px; height: 20px; background-image: url(Imagenes/abajo.JPG); background-size: 100% 100%; background-repeat: no-repeat; " value=""  actionListener="#{controlComprobantes.siguienteEmpleado()}" process="@this" />
+                                <p:commandButton id="btnArriba" style="position: absolute; left: 815px; top: 24px; font-size: 11px; font-family: Arial, Helvetica, sans-serif; width: 20px; height: 20px; background-image: url(Imagenes/arriba.JPG); background-size: 100% 100%; background-repeat: no-repeat; "  value="" actionListener="#{controlComprobantes.anteriorEmpleado()}" disabled="#{controlComprobantes.estadoBtnArriba}" process="@this" />
+                                <p:commandButton id="btnAbajo" style="position: absolute; left: 815px; top: 45px; font-size: 11px; font-family: Arial, Helvetica, sans-serif; width: 20px; height: 20px; background-image: url(Imagenes/abajo.JPG); background-size: 100% 100%; background-repeat: no-repeat; " value=""  actionListener="#{controlComprobantes.siguienteEmpleado()}" disabled="#{controlComprobantes.estadoBtnAbajo}" process="@this" />
                                 <p:commandButton style="position: absolute; left: 620px; top: 65px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="buscarEmpleado" value="#{msg['buscar']}"  process="@this" oncomplete="buscarEmpleadoDialogo.show();" update=":formularioDialogos:buscarEmpleadoDialogo" />
                                 <p:commandButton style="position: absolute; left: 740px; top: 65px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" disabled="#{controlComprobantes.mostrarTodos}" id="mostrarTodos" value="#{msg['mostrar']}" actionListener="#{controlComprobantes.mostarTodosEmpleados()}" process="@this" />
                             </p:panel>
@@ -498,7 +498,7 @@
                                 </p:columnGroup>
                             </p:dataTable>
                         </fieldset>
-                        <p:commandButton style="position: absolute; left: 800px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="#{msg['atras']}" icon="ui-icon-arrowreturnthick-1-w" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 800px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="#{msg['atras']}" actionListener="#{controlComprobantes.salir()}" icon="ui-icon-arrowreturnthick-1-w" action="nomina" process="@this" />
                     </p:panel>
                 </h:form>
                 <h:form id="formularioDialogos">
